--- a/content/w10.html
+++ b/content/w10.html
@@ -254,8 +254,7 @@ doc["add1to100"].bind('click', add)
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console1"></textarea></div>
-<p><!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></p>
-<!-- editor1 結束 --><hr/><!-- editor2 結束 -->
+<hr/><!-- editor2 結束 -->
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="./../cmsimde/static/Cango-24v03-min.js"></script>
 <script src="./../cmsimde/static/gearUtils-09.js"></script>
