--- a/config/content.htm
+++ b/config/content.htm
@@ -51,7 +51,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+        url = "https://gist.githubusercontent.com/41023244/04f7b8efc01f508f908cf6e56234a61e/raw/bc67399afb6e60fbd328f39260baeee19aaa871f/w10.py"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -171,7 +171,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+        url = "https://gist.githubusercontent.com/41023244/869edde28cc9f0e48cb9f888adf9c6a2/raw/4515020eeb03877fb6ee0f9289886beb896c1e21/w11.py"
     prog = open(url).read()
 
     # 將程式載入編輯區
