--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -51,7 +51,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+        url = "https://gist.githubusercontent.com/41023244/04f7b8efc01f508f908cf6e56234a61e/raw/bc67399afb6e60fbd328f39260baeee19aaa871f/w10.py"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -114,8 +114,7 @@ doc["add1to100"].bind('click', add)
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console1"></textarea></div>
-<p><!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></p>
-<!-- editor1 結束 --><hr/><!-- editor2 結束 -->
+<hr/><!-- editor2 結束 -->
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="/static/Cango-24v03-min.js"></script>
 <script src="/static/gearUtils-09.js"></script>
