--- a/config/content.htm
+++ b/config/content.htm
@@ -3,10 +3,6 @@
 <h1>HW</h1>
 <h2>W6</h2>
 <p></p>
-<h2>w14</h2>
-<h3>nx</h3>
-<h3>solvespace</h3>
-<h3>onshape</h3>
 <h2>w10</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
 <p><button id="add1to100">1 add to 100</button></p>
@@ -241,6 +237,18 @@ doc["add1to100"].bind('click', add)
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console1"></textarea></div>
+<div style="width: 100%; height: 100%;">
+<div style="width: 100%; height: 100%;">
+<h2>w14</h2>
+<h3>nx</h3>
+<h3>solvespace</h3>
+<h3>onshape</h3>
+<p></p>
+<h2>w16</h2>
+</div>
+<p></p>
+<div id="brython_div2"></div>
+</div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></p>
 <!-- editor2 結束 -->
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
@@ -527,6 +535,6 @@ doc["aitetris"].bind("click", aitetris.do)
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
-<p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
-<div id="brython_div2"></div>
+<div style="width: 100%; height: 100%;"></div>
+<div style="width: 100%; height: 100%;"></div>
 <!-- editor2 結束 --><hr/>
