--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,8 @@
 <h1>About</h1>
 <p>cmsite</p>
 <h1>HW</h1>
+<h2>W6</h2>
+<p></p>
 <h2>w10</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
 <p><button id="add1to100">1 add to 100</button></p>
@@ -121,7 +123,8 @@ doc["add1to100"].bind('click', add)
 <script src="/static/SVGpathUtils-6v03-min.js"></script>
 <script src="/static/sylvester.js"></script>
 <script src="/static/PrairieDraw.js"></script>
-</p><h2>w11</h2>
+</p>
+<h2>w11</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
 <p><button id="add1to100">1 add to 100</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
@@ -234,6 +237,16 @@ doc["add1to100"].bind('click', add)
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console1"></textarea></div>
+<div style="width: 100%; height: 100%;">
+<div style="width: 100%; height: 100%;">
+<h2>w14</h2>
+<h3>nx</h3>
+<h3>solvespace</h3>
+<h3>onshape</h3>
+</div>
+<p></p>
+<div id="brython_div2"></div>
+</div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></p>
 <!-- editor2 結束 -->
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
@@ -242,7 +255,8 @@ doc["add1to100"].bind('click', add)
 <script src="/static/SVGpathUtils-6v03-min.js"></script>
 <script src="/static/sylvester.js"></script>
 <script src="/static/PrairieDraw.js"></script>
-</p><h1>Brython</h1>
+</p>
+<h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -519,6 +533,7 @@ doc["aitetris"].bind("click", aitetris.do)
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
-<p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
-<div id="brython_div2"></div>
+<div style="width: 100%; height: 100%;"></div>
+<div style="width: 100%; height: 100%;">
+</div>
 <!-- editor2 結束 --><hr/>
