--- a/content/About.html
+++ b/content/About.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W6.html'>W6</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='nx.html'>nx</a><li><a href='solvespace.html'>solvespace</a><li><a href='onshape.html'>onshape</a></li></ul><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W6.html'>W6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='nx.html'>nx</a><li><a href='solvespace.html'>solvespace</a><li><a href='onshape.html'>onshape</a></li></ul><li><a href='w16.html'>w16</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,7 +143,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='HW.html'>Next</a> >> HW<br /><h1>About</h1>
 <p>cmsite</p>
-<br /> <a href='HW.html'>Next</a> >> HW</div>
+<p>倉儲網址 <a href="https://github.com/mdecad2022/site-41023244">https://github.com/mdecad2022/site-41023244</a></p>
+<p>靜態網站 <a href="https://mdecad2022.github.io/site-41023244/">https://mdecad2022.github.io/site-41023244/</a></p><br /> <a href='HW.html'>Next</a> >> HW</div>
         
     <!-- footer -->
       <div class="container">
