--- a/content/w14.html
+++ b/content/w14.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W6.html'>W6</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='nx.html'>nx</a><li><a href='solvespace.html'>solvespace</a><li><a href='onshape.html'>onshape</a></li></ul><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W6.html'>W6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='nx.html'>nx</a><li><a href='solvespace.html'>solvespace</a><li><a href='onshape.html'>onshape</a></li></ul><li><a href='w16.html'>w16</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,8 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='nx.html'>Next</a> >> nx<br /><h1>w14</h1>
-<br />W6 << <a href='W6.html'>Previous</a> <a href='nx.html'>Next</a> >> nx</div>
+    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='nx.html'>Next</a> >> nx<br /><h1>w14</h1>
+<br />w11 << <a href='w11.html'>Previous</a> <a href='nx.html'>Next</a> >> nx</div>
         
     <!-- footer -->
       <div class="container">
