--- a/config/content.htm
+++ b/config/content.htm
@@ -330,7 +330,7 @@ def clear_bd1(ev):
 # 利用 ace 中的 Editor 建立 Ace 物件, 其中的輸入變數分別對應到頁面中的編輯區物件
 Ace2 = ace.Editor(editor_id="kw_editor1", console_id="kw_console1", container_id="kw__container1", storage_id="kw_py_src1" )
 
-add1to100_url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+add1to100_url = "https://gist.githubusercontent.com/41023244/284decb3f757f36f27c1b52091591905/raw/db568abb3757f34f0f97d75acd90e21494a83e5f/w16.py"
 
 # 從 gist 取得程式碼
 add_src = open(add1to100_url).read()
