--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,7 @@
 <h1>About</h1>
 <p>cmsite</p>
-<h1>HW</h1>
+<p>倉儲網址 <a href="https://github.com/mdecad2022/site-41023244">https://github.com/mdecad2022/site-41023244</a></p>
+<p>靜態網站 <a href="https://mdecad2022.github.io/site-41023244/">https://mdecad2022.github.io/site-41023244/</a></p><h1>HW</h1>
 <h2>W6</h2>
 <p></p>
 <h2>w10</h2>
